cabal-version: 3.12
name:          mario-game
version:       0.1.0.0
synopsis:      Super Mario Bros. clone in Haskell
license:       MIT
author:        Ayman Hassen, Jake Alsept
build-type:    Simple

executable mario
  main-is:          Main.hs
  other-modules:    Constants, Types, Physics, Mario, Enemy, PowerUp, Level, Rendering, GameState
  hs-source-dirs:   app, src
  build-depends:    base >=4.14, gloss
  default-language: Haskell2010